OSS rules_hashicorp (#1415)
* start on rules_hashicorp_ext

* wip

* wip

GitOrigin-RevId: 78a88d88051b44e4599fbbc6bbb73c5149f85a1d

--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   formatting:
+    runs-on: [ubuntu-latest]
     name: format bazel files
     steps:
       - uses: actions/checkout@4
